<resources>
    <string name="app_name">Desafio BCI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Splash-->
    <string name="main_title">DESAFÍO BCI</string>

    <!--    Pokemon details-->
    <string name="type">Tipo</string>
    <string name="places_to_find">Donde encontrarlo</string>
    <string name="moves">Ataques</string>
    <string name="abilities">Habilidades</string>
    <string name="evolutions">Evoluciones</string>
</resources>